move username and password to property file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ management.security.enabled = true
 management.security.roles = ADMIN
  
 security.basic.enabled = true
-#security.user.name =admin
-#security.user.password =admin
+security.user.name=admin
+security.user.password =admin
